--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
     <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
