--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <head>
     <title>Keeper App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css"/>
   </head>
 
   <body>
